# tiago_dual_arm_manipulation

./: .gitignore  README.md  arm_right_kinematics.yaml  moj_robot.xml
config/: kinematics_tiago_fixed.yaml
src/models/cube/: cube.sdf
src/models/table/: model.sdf
src/object_segmentation/: package.xml  setup.cfg  setup.py
src/object_segmentation/object_segmentation/: cale.py  centroid.txt  object_segmentation.py
src/tiago_auto_move/: CMakeLists.txt  package.xml
src/tiago_auto_move/launch/: my_world.world  tiago.launch.py
src/tiago_auto_move/src/: move_to_target.cpp
src/tiago_target_pose/: package.xml  setup.cfg  setup.py
src/tiago_target_pose/resource/: tiago_target_pose
src/tiago_target_pose/tiago_target_pose/: publish_centroid_pose.py
