<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tiago_auto_move</name>
  <version>0.0.0</version>
  <description>Core manipulation controller for TIAGo Pro dual-arm robot. 
    Implements MoveIt 2 interfaces for pick-and-place tasks and 
    integrates with perception and simulation modules.</description>
  <maintainer email="zuzanna.urbaniak.1@student.put.poznan.pl">Zuzanna Urbaniak</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>linkattacher_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
