<?xml version="1.0"?>
<package format="3">
  <name>tiago_target_pose</name>
  <version>0.0.1</version>
  <description>
    Interface package for grasp target publishing. 
    Calculates the final end-effector pose based on perception centroids 
    and applies kinematic offsets for the TIAGo Pro gripper.</description>
  <maintainer email="zuzanna.urbaniak.1@student.put.poznan.pl">Zuzanna Urbaniak</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
